style: add style to btns for gameroom

--- a/src/app.css
+++ b/src/app.css
@@ -165,3 +165,21 @@ body{
     filter: blur(8px);
     -webkit-filter: blur(8px);
 }
+
+.btnContainer{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px;
+}
+
+.btnContainer button{
+    width: 230px;
+    padding: 25px;
+    margin: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #FB8500;
+    color: white;
+    border-radius: 15px;
+
+}
