--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,6 @@ body {
   background: #d4f1ff;
   height: 100%;
   width: 100%;
-
 }
 /* LoginPage Styling */
 .Navbar-login {
@@ -79,7 +78,7 @@ body {
 }
 
 .camper {
-  height:45%;
+  height: 45%;
   width: 30%;
   bottom: -86px;
   right: 0px;
@@ -213,7 +212,7 @@ body {
   margin: 10px;
 }
 
-.btnContainer button {   
+.btnContainer button {
   width: 43%;
   padding: 25px;
   margin: 5px;
@@ -262,32 +261,34 @@ body {
 }
 
 @media screen and (max-width: 1300px) {
- .btnContainer {
+  .btnContainer {
     width: 90%;
- }
- .img, .gr_img{
+  }
+  .img,
+  .gr_img {
     height: 35%;
     width: 30%;
- }
-}
-
-@media screen and (max-width: 700px){
-  .img, .gr_img{
-     height: 30%;
-     width: 20%;
   }
 }
 
-@media screen and (max-width: 800px){
-   .mainContainer{
-      flex-direction: column;
-      align-items: center;    
-    }
-    .img, .gr_img{
-       display: none
-    }
+@media screen and (max-width: 700px) {
+  .img,
+  .gr_img {
+    height: 30%;
+    width: 20%;
+  }
+}
 
+@media screen and (max-width: 800px) {
+  .mainContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .img,
+  .gr_img {
+    display: none;
+  }
+}
 .alert {
   color: red;
-
 }
